search: fix loop icon. get rid of input on small screen

--- a/src/components/ui/Search/Search.module.scss
+++ b/src/components/ui/Search/Search.module.scss
@@ -8,6 +8,7 @@
     position: absolute;
     right: 10px;
 
+    stroke: var(--grey-100);
     visibility: hidden;
   }
 
