--- a/src/layouts/Header/GlobalSearch/GlobalSearchInput/GlobalSearchInput.module.scss
+++ b/src/layouts/Header/GlobalSearch/GlobalSearchInput/GlobalSearchInput.module.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  .loopIcon {
+    stroke: var(--grey-500);
+  }
+
   .cancelBtn {
     margin: 12px 12px 12px 0;
     font-size: var(--font-base-size-md);
